# FINTALLY-Finance-Monitoring-app

./: .gitignore  README.md
api/: index.js
api/config/: defaultTaxIndia.js
api/cron jobs/: recurringJobs.js
api/finance-cpp-addon/: .dockerignore  .gitignore  binding.gyp  dockerfile  index.js  package.json
api/finance-cpp-addon/src/: finance.cpp
api/finance-cpp-addon/tests/: budget.test.js  compound.test.js  emi.test.js
api/middlewares/: auth.js
api/models/: Budget.js  Feedback.js  TaxProfiles.js  Transaction.js  User.js
api/routes/: Feedback.js  Transaction_route.js  auth.js  budget.js  chatbot.js  emi.js  income.js  insights.js  tax.js
api/services/: emiBudget.service.js  income.service.js  tax.service.js  taxApi.service.js
api/utils/: finance.js
chatbot-backend/: build_index.py  main.py  requirements-llama.txt  requirements.txt
chatbot-backend/app/: main.py
chatbot-backend/app/auth/: utils.py
chatbot-backend/app/database/: db.py
chatbot-backend/app/models/: schemas.py
chatbot-backend/app/routes/: chatbot.py
chatbot-backend/app/services/: db_service.py  rag_engine.py  vectorstore.py
chatbot-backend/app/vectorstore/: manifest.json
chatbot-backend/dependencies/: auth.py  request_context.py
chatbot-backend/fintally_chatbot/: Cargo.toml  __init__.py  llm.py
chatbot-backend/fintally_chatbot/.cargo/: config.toml
chatbot-backend/fintally_chatbot/src/: lib.rs
chatbot-backend/fintally_chatbot/src/core/: config.rs  mod.rs  types.rs
chatbot-backend/fintally_chatbot/src/core/finance/: budgeting.rs  cashflow.rs  emi.rs  investments.rs  loans.rs  mod.rs  savings.rs  tax.rs
chatbot-backend/fintally_chatbot/src/core/llm/: assistant.rs  dto.rs  embedding.rs  engine.rs  mod.rs  model.rs  planner.rs  prompt.rs  python_engine.rs  tools.rs
chatbot-backend/fintally_chatbot/src/core/math/: mod.rs  similarity.rs  stats.rs
chatbot-backend/fintally_chatbot/src/core/utils/: domain_error.rs  errors.rs  logging.rs  mod.rs
chatbot-backend/fintally_chatbot/src/python_bindings/: mod.rs
chatbot-backend/fintally_chatbot/src/python_bindings/finance/: assistant.rs  mod.rs
chatbot-backend/fintally_chatbot/src/python_bindings/llm/: chat.rs  mod.rs
chatbot-backend/fintally_chatbot/tests/llm/: inference_tests.py  pyllm_backpressure_tests.py  pyllm_basic_tests.py  pyllm_cancellation_tests.py  pyllm_stream_test.py
chatbot-backend/my_llama_chatbot/: Cargo.toml
chatbot-backend/routers/: analytics.py  chat.py
chatbot-backend/rust_backend/src/: lib.rs
chatbot-backend/rust_backend/tests/: test_advanced_analytics.py  test_benchmarks.py
chatbot-backend/schemas/: analytics.py
chatbot-backend/services/: analytics_service.py  chat_history_service.py  db.py  llm_bridge.py  utils.py
django-backend/: manage.py  requirements.txt
django-backend/finanical_insights/: asgi.py  settings.py  urls.py  wsgi.py
django-backend/insights/: auth.py  context.py  models.py  resolvers.py  urls.py  utils.py  views.py
django-backend/rust_extensions/rust_backend/: .gitignore  Cargo.toml  test_rust_backend.py
django-backend/rust_extensions/rust_backend/src/: lib.rs
django-backend/rust_extensions/rust_backend/tests/: test_advanced_analytics.py  test_base_analytics.py  test_benchmarks.py
frontend/: index.html  package.json
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/Components/About page/: About.css  About.jsx
frontend/src/Components/Chatbot page/: Chatbot.css  ChatbotPage.jsx
frontend/src/Components/Feedback page/: Feedback.css  Feedback.jsx
frontend/src/Components/Home page/: Home.css  Home.jsx
frontend/src/Components/Insights Page/: Insights.css  Insights.jsx
frontend/src/Components/Insights Page/components/: AnomaliesTable.jsx  BarChartBlock.jsx  BudgetBreachCard.jsx  CashflowChartBlock.jsx  EMICard.jsx  FiltersPanel.jsx  GoalCard.jsx  PieChartBlock.jsx  SavingsCard.jsx  TrendChartBlock.jsx  index.js
frontend/src/Components/Insights Page/hooks/: useAdvancedAnalytics.js  useBarAndCatergoryData.js  usePersistedInsightsState.js  useTrendData.js
frontend/src/Components/Login Page/: Login.css  Login.jsx
frontend/src/Components/Signup Page/: Signup.css  Signup.jsx
frontend/src/Shared Components/Footer/: Footer.css  Footer.jsx
frontend/src/Shared Components/Navbar/: Navbar.css  Navbar.jsx
