[package]
name = "fintally_chatbot"
version = "0.1.0"
edition = "2021"
description = "LLM chatbot extension for FinTally (personal finance assistant)"
license = "MIT OR Apache-2.0"  # ← add one, good practice
repository = "https://github.com/yourusername/fintally"  # ← add if public
readme = "README.md"

[lib]
name = "_native"
crate-type = ["cdylib"]  # for PyO3 Python module

[dependencies]
pyo3 = { version = "0.22.6", features = ["extension-module", "abi3-py38", "serde"] }  # patch version for stability


# ── Utilities ────────────────────────────────────────────────────────────────
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "fs", "io-util"] }  # updated + useful features
once_cell = "1.19.0"
thiserror = "1.0.63"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }  # better for debug
signal-hook = "0.3.17"

# Serialization
serde_json = "1"
serde = { version = "1", features = ["derive"] }

# Async
async-trait = "0.1"
futures-core = "0.3"
futures-util = "0.3"
futures-executor = "0.3"
tokio-stream = "0.1.18"
tokio-util = "0.7.18"

[profile.dev]
incremental = true

[profile.release]
opt-level = 3
lto = "thin"          # ← thin LTO is great balance for release wheels (faster build + good perf)
codegen-units = 16    # ← helps build speed without huge perf loss
panic = "abort"       # ← smaller binaries, fine for extension module
strip = true          # ← smaller .pyd size
