[package]
name = "fintally_chatbot"
version = "0.1.0"
edition = "2021"

[lib]
name = "fintally_chatbot"
crate-type = ["cdylib"]  # Required for PyO3 Python module

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }  # Stable, works with Python 3.8+
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }     # Async runtime

# Candle ecosystem - pure Rust, no C++ needed
candle-core = "0.9.1"
candle-transformers = "0.9.1"
candle-nn = "0.9.1"

# Model downloading and caching
hf-hub = { version = "0.3.2", features = ["tokio"] }  # Async download from Hugging Face

# Tokenization (supports Llama, Phi, Mistral, Qwen, etc.)
tokenizers = "0.19.1"

# Lazy statics for model singleton (load once)
once_cell = "1.19.6"

# Optional: Better error handling
thiserror = "1.0.60"

# Optional: For logging/debugging during development
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }

# Optional: For graceful shutdown or timeouts
signal-hook = "0.3.17"

[profile.dev]
incremental = true

[profile.release]
incremental = true   # optional
opt-level = 3
