[package]
name = "rust_backend"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_backend"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
mongodb = { version = "2.8.2", default-features = false, features = ["tokio-runtime"] }
bson = "2.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
futures = "0.3"
rand = "0.8"
rand_distr = "0.4"